Version ClaSS-0.9.20 release (2010/5/28)
-----------------------------------------


Version ClaSS-0.9.21 release (2010/5/12)
-----------------------------------------

Update to the spanish language pack.

Fix to the comment pop-ups which had lost their span element.

Changed the export of the marktable to use excel instead of csv for
its fileformat. Requires additional PEAR package
Spreadsheet_Excel_Writer.

Extended the length of categorydef name field to be varchar 240 (apply
the patch!).

Added stage as a field to the categorydef table and amended
get_report_categories to make use of it. Now possible to have
different tick-boxes at different stages within the same course-subject.


Version ClaSS-0.9.19 release (2010/5/09)
-----------------------------------------

Updated the liscense to be the GNU AGPL version 3. 

Included logos on the about page for AGPL and ClaSSIS.

Fix to the xml_array_indexed function which only affected update
curriculum.

Opened access to enrolment_view for form tutors.

Fix to update_curriculum when inserting new subject components.

The report_attendance list now counts "late to register" and
"unauthorised lates" for the late columnd.

Improved the new_assessment page to allow assessments to be moved
between profiles.

Added help pop-ups to the component and strand status select lists.

Reworked the colclass in the MarkBook table to also colour the
columns' selection in the side options.

Included a description line for the profile printing which lists
included classes.

The mark table now understands a column type of "dif" to take the
difference between most recent and first scores in a
midlist. Currently only available to assessment profiles.

Changed fetch_cohortAssessmentDefs() to more logically use profile id
instead of profile name.



Version ClaSS-0.9.18 release (2010/4/30)
-----------------------------------------

Included a late to registration count on the Attendance Profile.

Removed the html function twoplus_print.
