@@ -1,6 +1,8 @@
 Version ClaSS-0.9.20 release (2010/5/28)
 -----------------------------------------
 
+A small change to the subject sequence for fetchReports.
+
 
 Version ClaSS-0.9.21 release (2010/5/12)
 -----------------------------------------
